--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@
 <section id="promo-banner">
   <div class="banner-content">
     <p>Підтримай збір на ЗСУ, та отримай можливість виграти <br/>новенький iPhone 15 Pro!</p>
-    <button (click)="getUserIp()">Задонатити</button>
+    <button (click)="getUserIp('btn')">Задонатити</button>
   </div>
 </section>
 
